traces/bug_256.txt
examples++-load/splitmesh12.cpp:207: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/splitmesh12.cpp:207:1: initialization of callDoLoadInit
205.       Global.Add("splitmesh12","(",new OneOperator1s_<Mesh3 const *,Mesh3 const *>(SplitMesh12));
206.   }
207. > LOADFUNC(Load_Init)

examples++-load/splitmesh12.cpp:207:1: call to DoLoadInit
205.       Global.Add("splitmesh12","(",new OneOperator1s_<Mesh3 const *,Mesh3 const *>(SplitMesh12));
206.   }
207. > LOADFUNC(Load_Init)

examples++-load/splitmesh12.cpp:207:1: call to addInitFunct
  205.       Global.Add("splitmesh12","(",new OneOperator1s_<Mesh3 const *,Mesh3 const *>(SplitMesh12));
  206.   }
  207. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
